[gd_scene load_steps=5 format=3 uid="uid://csek6obqfghwx"]

[ext_resource type="Script" uid="uid://0nftxsrqm1wp" path="res://scripts/ui/selection_scene.gd" id="1_7ulp2"]
[ext_resource type="PackedScene" uid="uid://cc2ldxi27dh33" path="res://scenes/card_slot.tscn" id="3_s1jrx"]
[ext_resource type="PackedScene" uid="uid://b6x8j6u4y5v1e" path="res://scenes/ui/zoom_overlay.tscn" id="4_zoom"]
[ext_resource type="PackedScene" uid="uid://bsjobgwkuc4d3" path="res://scenes/ui/character_card_cell.tscn" id="5_cell"]

[node name="SelectionScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ulp2")
character_card_scene = ExtResource("5_cell")

[node name="ZoomOverlay" parent="." instance=ExtResource("4_zoom")]
visible = false
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CharacterGrid" type="GridContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
columns = 4

[node name="CardSlotContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CardSlotContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.196078)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/CardSlotContainer"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SupportPosition1" type="Control" parent="VBoxContainer/CardSlotContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardSlot" parent="VBoxContainer/CardSlotContainer/HBoxContainer/SupportPosition1" instance=ExtResource("3_s1jrx")]
position = Vector2(120, 260)

[node name="ActivePosition" type="Control" parent="VBoxContainer/CardSlotContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardSlot" parent="VBoxContainer/CardSlotContainer/HBoxContainer/ActivePosition" instance=ExtResource("3_s1jrx")]
position = Vector2(120, 160)

[node name="SupportPosition2" type="Control" parent="VBoxContainer/CardSlotContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CardSlot" parent="VBoxContainer/CardSlotContainer/HBoxContainer/SupportPosition2" instance=ExtResource("3_s1jrx")]
position = Vector2(120, 260)

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 2
offset_left = 280.0
offset_top = 1160.0
offset_right = 440.0
offset_bottom = 1234.0
action_mode = 0
text = "Continue"
