[gd_scene load_steps=5 format=3 uid="uid://c23djdfkgn0j8"]

[ext_resource type="Script" uid="uid://0nftxsrqm1wp" path="res://scripts/ui/selection_scene.gd" id="1_7ulp2"]
[ext_resource type="PackedScene" uid="uid://bovi23yf8c4uk" path="res://scenes/objects/character_card.tscn" id="2_ofowu"]
[ext_resource type="PackedScene" uid="uid://cc2ldxi27dh33" path="res://scenes/card_slot.tscn" id="3_s1jrx"]
[ext_resource type="Script" uid="uid://d0bxbch4jkp08" path="res://scripts/ui/zoom_overlay.gd" id="4_kgrwx"]

[node name="SelectionScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ulp2")
character_card_scene = ExtResource("2_ofowu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_right = 720.0
offset_bottom = 1279.0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CardListContainer" type="GridContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/CenterContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 20
columns = 3

[node name="SubViewportContainer" type="SubViewportContainer" parent="VBoxContainer/MarginContainer/ScrollContainer/CenterContainer"]
layout_mode = 2

[node name="SubViewport" type="SubViewport" parent="VBoxContainer/MarginContainer/ScrollContainer/CenterContainer/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="CharacterGrid" type="Node2D" parent="VBoxContainer/MarginContainer/ScrollContainer/CenterContainer/SubViewportContainer/SubViewport"]

[node name="CardSlotContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CardSlot" parent="VBoxContainer/CardSlotContainer" instance=ExtResource("3_s1jrx")]
position = Vector2(365, 152)

[node name="CardSlot2" parent="VBoxContainer/CardSlotContainer" instance=ExtResource("3_s1jrx")]
position = Vector2(594, 266)

[node name="CardSlot3" parent="VBoxContainer/CardSlotContainer" instance=ExtResource("3_s1jrx")]
position = Vector2(134, 263)

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/CardSlotContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.196078)

[node name="ContinueButton" type="Button" parent="."]
layout_mode = 2
offset_left = 284.0
offset_top = 1164.0
offset_right = 435.0
offset_bottom = 1234.0
action_mode = 0
text = "Continue"

[node name="ZoomOverlay" type="Control" parent="." groups=["zoom_overlay"]]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_kgrwx")

[node name="ColorRect" type="ColorRect" parent="ZoomOverlay" groups=["zoom_overlay"]]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478431, 0.478431, 0.478431, 0.588235)

[node name="ZoomCardContainer" type="CenterContainer" parent="ZoomOverlay" groups=["zoom_overlay"]]
z_index = 10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
